# cs33

./: .gitignore  README.md
attacklab/: .gitignore  README.md  README.txt  cookie.txt  ctarget  ctarget.asm  farm.c  hexer  rtarget  rtarget.asm  touch1.txt
attacklab/asm/: ctarget.asm  ctarget.dis  rtarget.asm  rtarget.dis
attacklab/solutions/: touch1.txt  touch2.txt  touch3.txt  touch4.txt  touch5.txt
bomblab/: README  README.md  bomb  bomb.asm  bomb.c  bomb.dis  solutions.txt
datalab/: CMakeLists.txt  README  README.md
datalab/src/: bits.c
hw1/: hw1.c  hw1.txt  test.c
hw2/: hw2.txt
hw3/: hw3.txt
hw4/: hw4.c  hw4.txt
hw5/: hw5.c  hw5.txt
hw6/: hw6.txt  main.c
hw7/: hw7.txt  main.c
hw8/: hw8.txt  main.c
lab0/include/: bits.h
lab0/src/: bits.c  decl.c  fshow.c  ishow.c  tests.c
parallellab/: CMakeLists.txt  README.md  kernel.h  kernel_omp.c  kernel_seq.c  main.c  omp_lab.txt
parallellab/src/: kernel_omp.c
